flux/apps/int/pingvin-share/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingvin-share
  labels:
    app.kubernetes.io/name: pingvin-share
    app.kubernetes.io/instance: pingvin-share
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: pingvin-share
      app.kubernetes.io/instance: pingvin-share
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pingvin-share
        app.kubernetes.io/instance: pingvin-share
    spec:
      containers:
        - name: pingvin-share
          image: stonith404/pingvin-share:v1.10.1
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /opt/app/backend/data
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pingvin-share-pvc
